# CMake

./: .travis.yml
Help/command/: continue.rst
Help/manual/: cmake-modules.7.rst  cmake-properties.7.rst  cmake-variables.7.rst
Help/module/: XCTestUtilities.rst
Help/policy/: CMP0055.rst
Help/prop_gbl/: PREFIX_FOLDERS.rst
Help/prop_tgt/: PROJECT.rst  XCODE_ATTRIBUTE_an-attribute.rst  XCTEST.rst  XCTEST_HOST.rst
Help/release/dev/: xcode-xctest.rst
Help/variable/: CMAKE_OSX_SDKVER.rst
Modules/: XCTestUtilities.cmake  install_universal_ios_library.cmake
Modules/Platform/: Darwin-Initialize.cmake  Darwin.cmake
Source/: cmContinueCommand.cxx  cmForEachCommand.cxx  cmGeneratorTarget.cxx  cmGeneratorTarget.h  cmGetPropertyCommand.cxx  cmGhsMultiTargetGenerator.cxx  cmGlobalGenerator.cxx  cmGlobalGenerator.h  cmGlobalGhsMultiGenerator.cxx  cmGlobalVisualStudio7Generator.cxx  cmGlobalXCodeGenerator.cxx  cmGlobalXCodeGenerator.h  cmInstallGenerator.cxx  cmInstallGenerator.h  cmInstallTargetGenerator.cxx  cmInstallTargetGenerator.h  cmMakefile.cxx  cmMakefile.h  cmSystemTools.cxx  cmSystemTools.h  cmTarget.cxx  cmTarget.h  cmTargetIncludeDirectoriesCommand.cxx  cmVisualStudio10TargetGenerator.cxx  cmWhileCommand.cxx  cmXCodeObject.cxx
Source/QtDialog/: CMakeSetupDialog.cxx  CMakeSetupDialog.h  RegexExplorer.cxx  RegexExplorer.h  RegexExplorer.ui
Tests/: CMakeLists.txt
Tests/CocoaExample/: CMakeLists.txt  CocoaExample.xcscheme
Tests/CocoaExample/CocoaExample/: Info.plist.in
Tests/Environment/: CMakeLists.txt  main.cxx
Tests/GJ/: CMakeLists.txt
Tests/RunCMake/: CMakeLists.txt
Tests/RunCMake/CMP0055/: CMP0055-WARN-Reject-Arguments-stderr.txt
Tests/RunCMake/XCTest/: RunCMakeTest.cmake  XCTestForFramework.cmake
Tests/RunCMake/XCTest/FrameworkExample/: Info.plist
Tests/RunCMake/XcodeProject/: RunCMakeTest.cmake  XcodeAttributeGenex-check.cmake  XcodeInstallIOS.cmake  XcodeInstallIOSUniversal-install-check.cmake  XcodeInstallIOSUniversal.cmake  XcodeIosInstall.cmake  XcodeIosInstallEffectivePlatforms.cmake  XcodePlatformFrameworks.cmake
Tests/RunCMake/continue/: NoArgumentsToContinue-stderr.txt  NoEnclosingBlock-stderr.txt  RunCMakeTest.cmake
Tests/XCTest/: CMakeLists.txt
Tests/XCTest/Framework/: CMakeLists.txt
Tests/XCTest/Framework/FrameworkExampleTests/: FrameworkExampleTests.m  Info.plist
Tests/XcodePlatformFrameworks/: CMakeLists.txt
